--- a/styles/main.css
+++ b/styles/main.css
@@ -7,13 +7,14 @@
 .main__container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 16px;
+  /* justify-content: space-between; */
 }
 
 .card {
   inline-size: 250px;
   block-size: 250px;
-  margin: 0 0 32px 0;
+  margin: 0 0 16px 0;
   padding: 16px;
   display: flex;
   flex-direction: column;
